# LrDB

./: Cargo.toml  README.md  build.rs
cmd/irdb-client/src/: main.rs
cmd/irdb-server/: Cargo.toml
cmd/irdb-server/src/: main.rs
cmd/tiny-client/: Cargo.toml
cmd/tiny-client/src/: main.rs
cmd/tiny-server/: Cargo.toml
cmd/tiny-server/src/: main.rs
irdb/: Cargo.toml
irdb/src/: err.rs  lib.rs  session.rs  util.rs
irdb/src/mysql/: mod.rs  mysql_const.rs
irdb/src/server/: auth.rs  codec.rs  err.rs  irdb.rs  mod.rs  server.rs  stream.rs  tls.rs
irkv/: Cargo.toml
irkv/src/: lib.rs
irkv/src/config/: mod.rs
irkv/src/server/: mod.rs
kv/: Cargo.toml
kv/src/: lib.rs
kv/src/server/: mod.rs
libs/coprocessor/: Cargo.toml
libs/coprocessor/src/: lib.rs
libs/db/: Cargo.toml
libs/db/src/: config.rs  lib.rs
libs/db/src/runtime/: server.rs
libs/dbmash/: Cargo.toml
libs/dbmash/src/: err.rs  lib.rs
libs/engine/: Cargo.toml
libs/engine/src/: lib.rs
libs/error/: Cargo.toml
libs/error/src/: err.rs  lib.rs
libs/mysql/: Cargo.toml
libs/mysql/src/: err.rs  lib.rs  session.rs  util.rs
libs/mysql/src/runtime/: mash.rs  mod.rs
libs/mysql/src/server/: err.rs  mod.rs  tls.rs
libs/protocol/: Cargo.toml
libs/protocol/src/: charset.rs  lib.rs  mysql_const.rs
libs/protocol/src/server/: auth.rs  codec.rs  stream.rs
libs/protos/: Cargo.toml  build.rs
libs/protos/proto/: coprocessor.proto  irkvpb.proto  kvrpcpb.proto  metapb.proto  tinykvpb.proto
libs/protos/src/: lib.rs
proto/: errorpb.proto  schedulerpb.proto
src/: lib.rs
