[workspace]
members = [
  "libs/coprocessor",
  "libs/protos",
  "irkv",
  "irdb",
  "cmd/tiny-server",
  "cmd/tiny-client",
]

default-members = ["cmd/tiny-server"]

[workspace.dependencies]
protos = { path = "libs/protos" }
irkv = { path = "irkv" }
irdb = { path = "irdb" }

tokio = { version = "1.32.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "tracing",
] }
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-stream = "0.1.14"

tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"

async-trait = "0.1.73"
