[workspace]
members = [
  "libs/coprocessor",
  "libs/protos",
  "libs/engine",
  "irkv",
  "irdb",
  "cmd/irdb-server",
  "cmd/irdb-client",
]

[workspace.dependencies]
protos = { path = "libs/protos" }
irkv = { path = "irkv" }
irdb = { path = "irdb" }
tokio = { version = "1.32.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
