[workspace]
members = [
  "libs/coprocessor",
  "libs/protos",
  "libs/protocol",
  "libs/error",
  "irkv",
  "irdb",
  "cmd/tiny-server",
  "cmd/tiny-client",
]

default-members = ["cmd/tiny-server"]

[workspace.dependencies]
irkv = { path = "irkv" }
protos = { path = "libs/protos" }
protocol = { path = "libs/protocol" }
error = { path = "libs/error" }
irdb = { path = "irdb" }

tokio = { version = "1.32.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
  "tracing",
] }
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-stream = "0.1.14"

tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"

async-trait = "0.1.73"
anyhow = "1.0.75"
bytes = "1.4.0"
byteorder = "1.4.3"

futures = "0.3.28"

iota = "0.2"
lazy_static = "1.4.0"
thiserror = "1.0.48"

num-derive = "0.4.0"
num-traits = "0.2.16"
chrono = "0.4.20"
pin-project = "1.0.10"

regex = "1"

rand = "0.8"
rsa = "0.6.0"
rust-crypto = "0.2.36"
rustls-pemfile = "1.0.0"
sha1 = "0.10.1"
tokio-native-tls = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }

serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_derive = "1.0.188"
