[package]
name = "irdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = { version = "0.32.2", features = ["tracing"] }
flate2 = { version = "1.0.27", default-features = false, features = [
    "rust_backend",
] }

anyhow = "1.0.75"
tokio = { workspace = true }
