[package]
name = "tiny-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
protos = {workspace = true}
tonic = "0.9.2"