[package]
name = "tiny-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irkv = { workspace = true }
irdb = { workspace = true }
tokio = { workspace = true }
db = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
