[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

protocol = { workspace = true }
error = { workspace = true }
