[package]
name = "mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_async = { version = "0.32.2", features = ["tracing"] }
flate2 = { version = "1.0.27", default-features = false, features = [
    "rust_backend",
] }

anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

tracing = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }

async-trait = { workspace = true }

bytes = { workspace = true }
byteorder = { workspace = true }

futures = { workspace = true }
iota = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }

num-derive = { workspace = true }
num-traits = { workspace = true }
chrono = { workspace = true }
pin-project = { workspace = true }

regex = { workspace = true }

rand = { workspace = true }
rsa = { workspace = true }
rust-crypto = { workspace = true }
rustls-pemfile = { workspace = true }
sha1 = { workspace = true }
tokio-native-tls = { workspace = true }
openssl = { workspace = true }
dbmash = { workspace = true }
