[package]
name = "protos"
version = "0.1.0"
edition = "2021"

#[features]
#default = ["prost-codec"]
#protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "raft-proto/protobuf-codec", "grpcio/protobuf-codec"]
#prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/grpcio-prost-codec", "raft-proto/prost-codec", "grpcio/prost-codec"]
#
#[dependencies]
#bytes = "1.4"
#protobuf = "=2.8.0"
#prost = { version = "0.9", optional = true }
#prost-derive = { version = "0.9", optional = true }
#futures = "0.3.5"
#lazy_static = { version = "1.3", optional = true }
#
#raft-proto = { version = "0.*", default-features = false }
#grpcio = { version = "0.*", default-features = false }
#
#[build-dependencies]
#protobuf-build = { version = "0.15.1", default-features = false}

[dependencies]
tonic = "0.9.2"
prost = "0.11"

[build-dependencies]
tonic-build = "0.9.2"